--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,9 @@ main {
   min-height: 85%;
   height: fit-content;
   padding:20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 footer {
