--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,60 +1,80 @@
+:root {
+  --primary:rgb(39, 39, 39);
+  --secondary:rgb(153, 153, 153);
+
+}
+html,body {
+  height: 100%;
+}
+
+#root {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: var(--primary);
+  color: var(--secondary);
+  height: 100%;
+}
+
 .App {
   height: 100%;
-  font-family: Georgia, 'Times New Roman', Times, serif; 
 }
 
 header {
-  height: 10%;
-  padding:20px;
+  margin: 0 1rem 1rem 1rem ;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid black;
-  background: linear-gradient(grey, rgb(97, 97, 97));
-  font-size: 1em;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--secondary);
+  font-size: 2em;
+  color: var(--secondary);
 }
 
 main {
-  min-height: 85%;
-  height: fit-content;
-  padding:20px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: white;
+  background-color: var(--primary);
+  min-height: 100vh;
 }
 
 footer {
-  height: 5%;
+  height: 5rem;
+  background-color: var(--primary);
+  color: var(--secondary);
   
   display: flex;
   justify-content: center;
   align-items: center;
-
-  border-top: black 1px solid;
-  background: linear-gradient(rgb(97, 97, 97), grey);
 }
 
-header, footer {
-  color: white;
+footer p {
+  border-top: var(--secondary) 1px solid;
+  padding-top: 2rem;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.App button {
+.nav-button {
+
+}
+
+.main-button {
   font-size: 2em;
-  color: white;
+  color: var(--primary);
   border-radius: 5px;
   padding: 1em;
   margin: 2em;
-  background-color: grey;
-  box-shadow: 0 0 5px 5px grey;
+  background-color: var(--secondary);
   transition: 500ms;
 }
 
-.App button:hover {
+.main-button:hover {
   transform: scale(1.1);
 }
 
 .Table {
-  color: black;
+  color: var(--secondary);
 }
 
 svg {
@@ -64,5 +84,5 @@ svg {
 
 a {
   text-decoration: none;
-  color: white;
+  color: var(--secondary);
 }
