--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,57 @@
+/*RESET*/
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* MAIN */
 :root {
   --primary:rgb(39, 39, 39);
   --secondary:rgb(153, 153, 153);
-
 }
 html,body {
   height: 100%;
@@ -24,8 +74,10 @@ header {
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid var(--secondary);
-  font-size: 2em;
   color: var(--secondary);
+  padding: 1rem;
+  position: fixed;
+  width: 96.5%;
 }
 
 main {
@@ -34,6 +86,7 @@ main {
   justify-content: center;
   background-color: var(--primary);
   min-height: 100vh;
+  padding-top: 3rem;
 }
 
 footer {
@@ -55,8 +108,16 @@ footer p {
   align-items: center;
 }
 
-.nav-button {
+h1 {
+  font-size: 3rem;
+}
 
+h2 {
+  font-size: 2rem;
+}
+
+.main-nav {
+  margin-right: 1rem;
 }
 
 .main-button {
