fix ticker form styling

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -52,6 +52,7 @@ table {
 :root {
   --primary:rgb(39, 39, 39);
   --secondary:rgb(153, 153, 153);
+  --highlight:rgb(206, 205, 205);
 }
 html,body {
   height: 100%;
@@ -146,4 +147,19 @@ svg {
 a {
   text-decoration: none;
   color: var(--secondary);
+}
+
+.ticker-form-label, .ticker-form-input {
+  margin-right: 0.5rem;
+}
+
+.ticker-form-input, .ticker-form-button {
+  background-color: var(--secondary);
+  box-shadow: none;
+  border: var(--highlight) 1px solid;
+  border-radius: 5px;
+}
+
+.ticker-form-button:hover {
+  opacity: 0.8;
 }
