--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -14,7 +14,8 @@
 
 .main {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   background-color: var(--primary);
   min-height: 100vh;
   padding-top: 15rem;
